Fixed the display of the footer logo in the socket, and realigned social menu with the rest of the menu.

--- a/assets/less/footer.less
+++ b/assets/less/footer.less
@@ -48,8 +48,14 @@
     background: @dark-blue;
     font-size: @small-fontsize;
     line-height: @grid-space * 2;
-    .atom-social {
-        margin-bottom: @grid-space/2;
-        margin-top: @grid-space/2;
+    .atom-logo {
+        margin-bottom: -@grid-space * 2;
+        img {
+            max-height: @grid-space * 2;
+            width: auto;
+        }
+        @media screen and (max-width: 1024px) {
+            margin-bottom: 0;
+        }
     }
 }
